// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OnboardingNavigation Edge Cases handles large page counts 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
    }
  }
>
  <View
    accessibilityLabel="Previous page"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    color="primary"
    focusable={true}
    hitSlop={
      {
        "bottom": 10,
        "left": 10,
        "right": 10,
        "top": 10,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 6,
          "height": 66,
          "justifyContent": "center",
        },
        {
          "paddingHorizontal": 16,
        },
        {
          "borderColor": "transparent",
          "borderWidth": 1,
        },
        false,
        undefined,
        false,
      ]
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 18,
            "fontWeight": "500",
          },
          {
            "color": "#9CA4AB",
          },
          false,
        ]
      }
    >
      Prev
    </Text>
  </View>
  <View
    accessibilityLabel="Next page"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    color="primary"
    focusable={true}
    hitSlop={
      {
        "bottom": 10,
        "left": 10,
        "right": 10,
        "top": 10,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 6,
          "height": 66,
          "justifyContent": "center",
        },
        {
          "paddingHorizontal": 16,
        },
        {
          "borderColor": "transparent",
          "borderWidth": 1,
        },
        false,
        undefined,
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 18,
            "fontWeight": "500",
          },
          {
            "color": "#F83758",
          },
        ]
      }
    >
      Next
    </Text>
  </View>
</View>
`;

exports[`OnboardingNavigation Edge Cases handles single page correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
    }
  }
>
  <View
    accessibilityLabel="Previous page"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    color="primary"
    focusable={true}
    hitSlop={
      {
        "bottom": 10,
        "left": 10,
        "right": 10,
        "top": 10,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 6,
          "height": 66,
          "justifyContent": "center",
        },
        {
          "paddingHorizontal": 16,
        },
        {
          "borderColor": "transparent",
          "borderWidth": 1,
        },
        false,
        undefined,
        {
          "opacity": 0.7,
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 18,
            "fontWeight": "500",
          },
          {
            "color": "#9CA4AB",
          },
          {
            "color": "#BBBBBB",
          },
        ]
      }
    >
      Prev
    </Text>
  </View>
  <View
    accessibilityLabel="Get started"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    color="primary"
    focusable={true}
    hitSlop={
      {
        "bottom": 10,
        "left": 10,
        "right": 10,
        "top": 10,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 6,
          "height": 66,
          "justifyContent": "center",
        },
        {
          "paddingHorizontal": 16,
        },
        {
          "borderColor": "transparent",
          "borderWidth": 1,
        },
        false,
        undefined,
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 18,
            "fontWeight": "500",
          },
          {
            "color": "#F83758",
          },
        ]
      }
    >
      Get Started
    </Text>
  </View>
</View>
`;

exports[`OnboardingNavigation Rendering renders navigation buttons 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
    }
  }
>
  <View
    accessibilityLabel="Previous page"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    color="primary"
    focusable={true}
    hitSlop={
      {
        "bottom": 10,
        "left": 10,
        "right": 10,
        "top": 10,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 6,
          "height": 66,
          "justifyContent": "center",
        },
        {
          "paddingHorizontal": 16,
        },
        {
          "borderColor": "transparent",
          "borderWidth": 1,
        },
        false,
        undefined,
        {
          "opacity": 0.7,
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 18,
            "fontWeight": "500",
          },
          {
            "color": "#9CA4AB",
          },
          {
            "color": "#BBBBBB",
          },
        ]
      }
    >
      Prev
    </Text>
  </View>
  <View
    accessibilityLabel="Next page"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    color="primary"
    focusable={true}
    hitSlop={
      {
        "bottom": 10,
        "left": 10,
        "right": 10,
        "top": 10,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 6,
          "height": 66,
          "justifyContent": "center",
        },
        {
          "paddingHorizontal": 16,
        },
        {
          "borderColor": "transparent",
          "borderWidth": 1,
        },
        false,
        undefined,
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 18,
            "fontWeight": "500",
          },
          {
            "color": "#F83758",
          },
        ]
      }
    >
      Next
    </Text>
  </View>
</View>
`;

exports[`OnboardingNavigation Rendering shows "Get Started" on last page 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
    }
  }
>
  <View
    accessibilityLabel="Previous page"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    color="primary"
    focusable={true}
    hitSlop={
      {
        "bottom": 10,
        "left": 10,
        "right": 10,
        "top": 10,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 6,
          "height": 66,
          "justifyContent": "center",
        },
        {
          "paddingHorizontal": 16,
        },
        {
          "borderColor": "transparent",
          "borderWidth": 1,
        },
        false,
        undefined,
        false,
      ]
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 18,
            "fontWeight": "500",
          },
          {
            "color": "#9CA4AB",
          },
          false,
        ]
      }
    >
      Prev
    </Text>
  </View>
  <View
    accessibilityLabel="Get started"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    color="primary"
    focusable={true}
    hitSlop={
      {
        "bottom": 10,
        "left": 10,
        "right": 10,
        "top": 10,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 6,
          "height": 66,
          "justifyContent": "center",
        },
        {
          "paddingHorizontal": 16,
        },
        {
          "borderColor": "transparent",
          "borderWidth": 1,
        },
        false,
        undefined,
        undefined,
      ]
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 18,
            "fontWeight": "500",
          },
          {
            "color": "#F83758",
          },
        ]
      }
    >
      Get Started
    </Text>
  </View>
</View>
`;
